--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 message.enter-name=Enter your name:
 message.enter-surname=Enter your surname:
-message.greetings=\n{0} {1}, welcome to testing the knowledge of the solar system!
-message.question=\nQuestion №{0}: {1}
+message.greetings=\n{0} {1}, welcome to testing the knowledge of the solar system!\n
+message.question=Question №{0}: {1}
 message.answers=\nAnswers:
 message.enumerate-answers={0}. {1}
 message.enter-answer-number=Enter answer number:
