Домашнее задание №4 (Spring Shell)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 message.enter-name=Enter your name:
 message.enter-surname=Enter your surname:
+message.login=\n{0} {1}, to start testing enter "s" or "start" in the console\n
 message.greetings=\n{0} {1}, welcome to testing the knowledge of the solar system!\n
 message.question=Question №{0}: {1}
 message.answers=\nAnswers:
