--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,5 +1,6 @@
 message.enter-name=Введите ваше имя:
 message.enter-surname=Введите вашу фамилию:
+message.login=\n{0} {1}, для запуска тестирования введите "s" или "start" в консоли\n
 message.greetings=\n{0} {1}, добро пожаловать на тестирование знаний Солнечной системы!\n
 message.question=Вопрос №{0}: {1}
 message.answers=\nВарианты ответов:
